...
            
            
            TabView () {
                RecentsView()
                    .tabItem {
                        Image(systemName: "house.fill")
                        Text("Início")
                    }
                
                GiftsView()
                    .tabItem {
                        Image(systemName: "gift.fill")
                        Text("É grátis!")
                    }
                
            }
            .accentColor(Color.white)
            .offset(y: -10)
            .ignoresSafeArea()
...
