//
//  Poor_PlayerUITests.swift
//  Poor PlayerUITests
//
//  Created by Matheus Accorsi on 22/11/22.
//

import XCTest

final class Poor_PlayerUITests: XCTestCase {

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testExample() throws {
        // UI tests must launch the application that they test.
        let app = XCUIApplication()
        app.launch()

        // Use XCTAssert and related functions to verify your tests produce the correct results.       
        
        let tabBar = app.tabBars["Tab Bar"]
        let grTisButton = tabBar.buttons["É grátis!"]
        grTisButton.tap()
        
        let scrollViewsQuery = app.scrollViews
        let element2 = scrollViewsQuery.children(matching: .other).element(boundBy: 0)
        let element = element2.children(matching: .other).element
        element.swipeDown()
        tabBar.buttons["Início"].tap()
        element.children(matching: .button).matching(identifier: "Add To Home Screen").element(boundBy: 0).tap()
                                               
        
    }

    func testLaunchPerformance() throws {
        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, watchOS 7.0, *) {
            // This measures how long it takes to launch your application.
            measure(metrics: [XCTApplicationLaunchMetric()]) {
                XCUIApplication().launch()
            }
        }
    }
}
